<resources>
    <string name="app_name">AndroidExercise</string>
    <string name="go_acti">Go Activity</string>
    <string name="go_fragment">Go Fragment</string>
    <string name="new_here_underline"><u>New here? Sign Up</u>.</string>
    <string name="email_hint">E-mail address</string>
    <string name="facebook_button_signin">Sign in with Facebook</string>
    <string name="twitter_button_signin">Sign in with Twitter</string>
    <string name="signin">Sign in</string>
    <string name="password_hint">123456789</string>
    <string name="back_button">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_loading_people">Loading</string>
    <string name="error_loading_people">Error</string>

</resources>